--- a/index.html
+++ b/index.html
@@ -1,29 +1,75 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<meta charset="UTF-8">
-	<title>Mi Primera Página Web</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Subir Trabajos - Luz Guadalupe</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f2f2f2;
+      text-align: center;
+      padding: 50px;
+    }
+
+    h1 {
+      color: #2e8b57;
+    }
+
+    form {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      display: inline-block;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    input[type="text"],
+    input[type="file"] {
+      display: block;
+      margin: 10px auto;
+      padding: 10px;
+      width: 80%;
+    }
+
+    input[type="submit"] {
+      background-color: #2e8b57;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    #resultado {
+      margin-top: 20px;
+      color: #333;
+    }
+  </style>
 </head>
 <body>
-	<header>
-    	<h1>Bienvenidos a mi sitio web</h1>
-	</header>
-	<nav>
-    	<ul>
-        	<li><a href="#inicio">Inicio</a></li>
-        	<li><a href="#acerca">Acerca de</a></li>
-        	<li><a href="#contacto">Contacto</a></li>
-    	</ul>
-	</nav>
-	<section id="inicio">
-    	<h2>Inicio</h2>
-    	<p>Este es el párrafo principal de la página.</p>
-    	<img src="imagen.jpg" alt="Descripción de la imagen">
-	</section>
-	<footer>
-    	<p>Derechos reservados 2025.</p>
-	</footer>
+
+  <h1>Sube tu trabajo - Luz Guadalupe</h1>
+
+  <form id="formulario">
+    <input type="text" placeholder="Nombre del estudiante" required />
+    <input type="file" id="archivo" required />
+    <input type="submit" value="Subir trabajo" />
+  </form>
+
+  <div id="resultado"></div>
+
+  <script>
+    document.getElementById("formulario").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const archivo = document.getElementById("archivo").files[0];
+      if (archivo) {
+        document.getElementById("resultado").textContent = `Archivo "${archivo.name}" subido correctamente.`;
+      } else {
+        document.getElementById("resultado").textContent = "Por favor, selecciona un archivo.";
+      }
+    });
+  </script>
+
 </body>
 </html>
-Luz guadalupe vite bravo
-estudiante del ceb 5/4
